Fixed the spacing problems

--- a/apps/to-do-list/CSS/to-do-list.css
+++ b/apps/to-do-list/CSS/to-do-list.css
@@ -131,7 +131,7 @@ ul {
 .task-item {
     margin-top: 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--secondary-grey);
 }
